--- a/ui/webui/resources/cr_components/customize_color_scheme_mode/segmented_button_option.css
+++ b/ui/webui/resources/cr_components/customize_color_scheme_mode/segmented_button_option.css
@@ -92,4 +92,7 @@ cr-ripple {
   font-weight: 500;
   line-height: 16px;
   max-height: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
